...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Sr-aO-aby">
                                <rect key="frame" x="311" y="64" width="83" height="39"/>
                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="22"/>
                                <state key="normal" title="Log out">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="logOutButtonPress:" destination="h9z-3x-CGA" eventType="touchUpInside" id="mw2-St-2TX"/>
                                </connections>
                            </button>
...
                            <constraint firstItem="ahT-XR-rHY" firstAttribute="bottom" secondItem="7Sr-aO-aby" secondAttribute="bottom" constant="710" id="pVR-Xw-o2n"/>
                            <constraint firstItem="teP-Ig-L8r" firstAttribute="top" secondItem="ahT-XR-rHY" secondAttribute="top" constant="80" id="tTX-eu-h0z"/>
                            <constraint firstItem="7Sr-aO-aby" firstAttribute="leading" secondItem="ahT-XR-rHY" secondAttribute="leading" constant="311" id="zh4-Gu-D70"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="ahT-XR-rHY"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Profile" image="person.fill" catalog="system" id="HQM-BS-anC"/>
                    <connections>
                        <outlet property="userImageView" destination="df3-Sb-hvI" id="USA-x6-vt8"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="UGJ-c8-xXP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hAv-CH-MIR">
                                <rect key="frame" x="160" y="451.5" width="100" height="41"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="100" id="AQX-e0-sCl"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="24"/>
                                <state key="normal" title="Begin">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="beginButtonPress:" destination="Cbx-tf-ehd" eventType="touchUpInside" id="MR8-oS-L53"/>
                                </connections>
                            </button>
...
                            <constraint firstItem="dMq-q2-xe9" firstAttribute="top" secondItem="BcI-1K-uEY" secondAttribute="top" constant="20" id="Tse-Nq-wm8"/>
                            <constraint firstItem="hAv-CH-MIR" firstAttribute="top" secondItem="dMq-q2-xe9" secondAttribute="bottom" constant="330" id="VrZ-Al-8n0"/>
                            <constraint firstAttribute="trailing" secondItem="dMq-q2-xe9" secondAttribute="trailing" constant="20" id="iTp-gh-rSd"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="BcI-1K-uEY"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Start training" image="play.fill" catalog="system" id="feW-Ek-eoU"/>
                    <connections>
                        <outlet property="beginButton" destination="hAv-CH-MIR" id="DfY-P6-aqt"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Tnn-kX-Fdg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="130" id="PgN-X8-SnV"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <color key="tintColor" red="0.9584877343" green="0.94223588820000004" blue="0.32994562630000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <state key="normal" title="Add exercise">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="addButtonPress:" destination="aft-jP-xpd" eventType="touchUpInside" id="6E1-J8-9yQ"/>
                                </connections>
                            </button>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="Pu3-B6-bQD" id="fAc-rW-msy"/>
                            <outlet property="delegate" destination="Pu3-B6-bQD" id="dD7-zq-XaY"/>
                        </connections>
                    </tableView>
                    <tabBarItem key="tabBarItem" title="Chosen exercises" image="star.fill" catalog="system" selectedImage="star.fill" id="D1g-iN-FCa"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="exz-jQ-TDm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="257" y="-156"/>
        </scene>
        <!--Manual Table View Controller-->
...
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <navigationBar key="tableHeaderView" contentMode="scaleToFill" id="qZN-iX-JA0">
                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                            <items>
                                <navigationItem title="Title" id="RMe-cj-wGF">
                                    <barButtonItem key="leftBarButtonItem" title="Back" id="LBv-iN-o2H">
                                        <connections>
                                            <action selector="backButtonPress:" destination="uIW-o2-hTc" id="xnc-OC-oyf"/>
                                        </connections>
                                    </barButtonItem>
                                </navigationItem>
                            </items>
...
